[package]
name = "prom-hashmod"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "prometheus compatible hashmod utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
clap = { version = "4", features = ["derive"] }
